adding background image

--- a/kitty.conf
+++ b/kitty.conf
@@ -23,4 +23,10 @@ map alt+right resize_window wider
 map alt+up resize_window taller
 map alt+down resize_window shorter
 
+sync_to_monitor
+
+background_image /home/sud_ydv11/Pictures/background.jpg
+background_tint 0.3
+
+
 
