--- a/theme.conf
+++ b/theme.conf
@@ -1,41 +1,55 @@
 
-# Nord Colorscheme for Kitty
+# gruvbox-dark colorscheme for kitty
+# snazzy theme used as base
 
-foreground            #D8DEE9
-background            #2E3440
-selection_foreground  #000000
-selection_background  #FFFACD
-url_color             #0087BD
-cursor                #81A1C1
+cursor                  #928374
+cursor_text_color       background
+
+visual_bell_color       #8ec07c
+bell_border_color       #8ec07c
+
+active_border_color     #d3869b
+inactive_border_color   #665c54
+
+active_tab_foreground   #fbf1c7
+active_tab_background   #665c54
+inactive_tab_foreground #a89984
+inactive_tab_background #3c3836
+
+foreground              #ebdbb2
+background              #272727
+selection_foreground    #655b53
+selection_background    #ebdbb2
+url_color               #d65c0d
 
 # black
-color0   #3B4252
-color8   #4C566A
+color0   #272727
+color8   #928373
 
 # red
-color1   #BF616A
-color9   #BF616A
+color1   #cc231c
+color9   #fb4833
 
 # green
-color2   #A3BE8C
-color10  #A3BE8C
+color2   #989719
+color10  #b8ba25
 
 # yellow
-color3   #EBCB8B
-color11  #EBCB8B
+color3   #d79920
+color11  #fabc2e
 
 # blue
-color4  #81A1C1
-color12 #81A1C1
+color4  #448488
+color12 #83a597
 
 # magenta
-color5   #B48EAD
-color13  #B48EAD
+color5   #b16185
+color13  #d3859a
 
 # cyan
-color6   #88C0D0
-color14  #8FBCBB
+color6   #689d69
+color14  #8ec07b
 
 # white
-color7   #E5E9F0
-color15  #ECEFF4
+color7   #a89983
+color15  #ebdbb2
